fixes dark mode errors

--- a/src/components/SearchChips/styles.module.scss
+++ b/src/components/SearchChips/styles.module.scss
@@ -8,7 +8,7 @@
     .chip,
     .show_all {
         padding: 10px 18px;
-        background: var(--background-2);
+        background: var(--background-1);
         border-radius: 20px;
         display: flex;
         flex-direction: row;
